--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
         </div>
 
         <div id="game-board" class="grid grid-cols-4 md:grid-cols-6 gap-4 mx-auto w-full max-w-5xl flex-grow">
-            </div>
+        </div>
+
+        <div class="mt-8 text-center text-gray-500 italic">
+            <p>Listen to your radio... it warns you of danger...</p>
+        </div>
+        
     </div>
 
     <div id="victory-screen" class="fixed inset-0 bg-black bg-opacity-100 flex-col justify-center items-center z-50 hidden">
