som de monstro e flip card adicionados

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     
     <audio id="static-sound" loop src="audio/static.mp3"></audio>
     <audio id="siren-sound" src="audio/sirene.mp3"></audio>
-    <audio id="monster-sound" src="https://www.myinstants.com/media/sounds/sh2-monster-scream-1.mp3"></audio>
-    <audio id="flip-sound" src="https://vgmsite.com/soundtracks/silent-hill-2-sound-effects/qckqxwso/Item%20Select.mp3"></audio>
+    <audio id="monster-sound" src="audio/squeal.mp3"></audio>
+    <audio id="flip-sound" src="audio/pown.mp3"></audio>
     <audio id="match-sound" src="https://vgmsite.com/soundtracks/silent-hill-2-sound-effects/hyswdgdu/Save%20Sound.mp3"></audio>
     <audio id="victory-sound" src="audio/receber_item.mp3"></audio>
 
